--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -3,9 +3,9 @@
 
   <section class="grid-overview-section mb-5">
     <% @pets.each do |pet| %>
-      <div class="grid-overview-section-item">
+      <%# <div class="grid-overview-section-item"> %>
         <%=render "shared/pet_card", pet: pet, delete: false%>
-      </div>
+      <%# </div> %>
     <% end %>
   </section>
 </div>
