--- a/app/views/shared/_pet_card_thinner.html.erb
+++ b/app/views/shared/_pet_card_thinner.html.erb
@@ -1,6 +1,10 @@
 <div class="card pet-card card-thinner" style="width: 20rem;">
   <%= link_to pet_path(pet), class:"pet-card-btn" do%>
-  <img class="card-img-top pet-card-image" src="https://source.unsplash.com/featured/?<%=pet.species%>}&#{rand(10000)}" alt="Card image cap">
+    <% if pet.photo.attached? %>
+  <%= cl_image_tag pet.photo.key, width: 300, height: 200, class: "pet-card-image"%>
+  <% else %>
+  <img src="https://source.unsplash.com/featured/?#{pet.species}&#{rand(10000)}" alt="main-photo photo" class="pet-card-image" >
+  <% end %>
   <div class="card-body px-3">
     <h3 class="card-title"><%= pet.name %> (<%= pet.species %>)</h3>
     <p class="card-text">Location: <%= pet.shelter.location %></p>
