fixed issue with recommended feature

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -43,5 +43,5 @@
       </div>
     </div>
   </div>
-  <%= render "pets/cards", title: "Suggested", pets: @pets  %>
+  <%= render "pets/cards", title: "Other #{@pet.species}s", pets: @pets  %>
 </div>
