--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid d-flex justify-content-between container-gap">
-<!--    Logo -->
+    <!--    Logo -->
     <div class="navbar-brand ">
       <div class="brand-nav">
         <%= link_to "/", class:"brand-link" do%>
@@ -10,80 +10,79 @@
         <% end %>
       </div>
     </div>
-<!--    Search bar -->
+    <!--    Search bar -->
     <div class="navbar-search-container">
-        <%= form_tag pets_path, method: :get, class: "" do %>
+      <%= form_tag pets_path, method: :get, class: "" do %>
         <div class="search-wrap">
-            <%= text_field_tag :query,
+          <%= text_field_tag :query,
               params[:query],
               class: "form-control navbar-search",
-              placeholder: "Find a pet"
+              placeholder: "Search by species or location"
             %>
-            <button class="navbar-search-btn">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
+          <button class="navbar-search-btn">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
         </div>
       <% end %>
     </div>
-<!--    avatar and dropdown -->
-  <% if current_user %>
+    <!--    avatar and dropdown -->
+    <% if current_user %>
       <div class="avatar-container">
         <div class="nav-avatar-dropdown">
           <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <%=link_to "/", class:"nav-link",
+            <li class="nav-item dropdown">
+              <%=link_to "/", class:"nav-link",
                        id:"navbarDarkDropdownMenuLink",
                        role:"button", data:{bs_toggle:"dropdown"},
                         aria:{expanded:"false"} do%>
-  <!--              place for avatar picture-->
+                <!--              place for avatar picture-->
                 <img src="https://picsum.photos/100/100"
                      alt="avatar" class="avatar-xlarge">
-            <%end %>
-
-            <ul class="dropdown-menu dropdown-menu-end"
+              <%end %>
+              <ul class="dropdown-menu dropdown-menu-end"
                 aria-labelledby="navbarDarkDropdownMenuLink">
-  <!--            List of actions in Dropdown-->
-               <% if current_user%>
+                <!--            List of actions in Dropdown-->
+                <% if current_user%>
                   <li>
-                      <span class="dropdown-item"><%= current_user.user_name %></span>
+                    <span class="dropdown-item"><%= current_user.user_name %></span>
                   </li>
+                  <li>
+                    <div class="dropdown-divider"></div>
+                  </li>
+                <%end %>
+                <li>
+                  <%=link_to "/", class:"dropdown-item" do%>
+                    <span>Home</span>
+                  <%end %>
+                </li>
+                <li>
+                  <%=link_to "/pets", class:"dropdown-item" do%>
+                    <span>Pets</span>
+                  <%end %>
+                </li>
+                <li>
+                  <%=link_to "/bookings", class:"dropdown-item" do%>
+                    <span>Bookings</span>
+                  <%end %>
+                </li>
+                <% if policy(Shelter).shelter? %>
+                  <li>
+                    <%=link_to "/shelter", class:"dropdown-item" do%>
+                      <span>Dashboard</span>
+                    <%end %>
+                  </li>
+                <% end %>
                 <li>
                   <div class="dropdown-divider"></div>
                 </li>
-              <%end %>
-              <li>
-                <%=link_to "/", class:"dropdown-item" do%>
-                  <span>Home</span>
-                <%end %>
-              </li>
-              <li>
-                <%=link_to "/pets", class:"dropdown-item" do%>
-                  <span>Pets</span>
-                <%end %>
-              </li>
-              <li>
-                <%=link_to "/bookings", class:"dropdown-item" do%>
-                  <span>Bookings</span>
-                <%end %>
-              </li>
-              <% if policy(Shelter).shelter? %>
-              <li>
-                <%=link_to "/shelter", class:"dropdown-item" do%>
-                  <span>Dashboard</span>
-                <%end %>
-              </li>
-              <% end %>
-              <li>
-              <div class="dropdown-divider"></div>
-              </li>
-              <li>
-                <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-              </li>
-            </ul>
-          </li>
-        </ul>
+                <li>
+                  <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </div>
-  <% end %>
+    <% end %>
   </div>
 </nav>
