--- a/app/views/shared/_booking_card.html.erb
+++ b/app/views/shared/_booking_card.html.erb
@@ -8,6 +8,12 @@
     <div class="card-text">Total: $<%= (booking.end_date-booking.start_date).to_i * booking.pet.price %>0
       (<%= (booking.end_date-booking.start_date).to_i %> days total)
     </div>
-    <%= link_to "Delete", booking_path(booking), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
-  </div>
+      <div class="delete-btn">
+        <%= link_to booking_path(booking),
+                    data: {turbo_method: :delete,
+                           turbo_confirm: "Are you sure?"} do%>
+          <i class="fa-solid fa-circle-xmark p-1"></i>
+        <%end %>
+      </div>
+    </div>
 </div>
