--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -2,7 +2,7 @@
   <h1 class="mt-3 mb-3"><%= @pet.name %></h1>
   <div class="photos">
     <div class="main-photo">
-      <img src= "<%= @pet.photo.attached? ? cl_image_path(@pet.photo.key): "https://source.unsplash.com/featured/?#{@pet.species}&#{rand(10000)}"%>" alt="main-photo photo" >
+      <img src= "<%= @pet.photo.attached? ? cl_image_path(@pet.photo.key): "https://source.unsplash.com/featured/?#{@pet.species}&##{rand(10000)}"%>" alt="main-photo photo" >
     </div>
     <div class="sub-photos">
       <img src="https://source.unsplash.com/featured/?<%=@pet.species%>}&#{rand(10000)}" alt="sub-photo photo">
