--- a/app/views/pets/_cards.html.erb
+++ b/app/views/pets/_cards.html.erb
@@ -1,4 +1,4 @@
-<h3><%= title %></h3>
+<h3 class="ps-3"><%= title %></h3>
 <div class="other-collection-slider">
   <% pets.each do |pet| %>
     <div class="slider-card">
