--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,20 +1,16 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 150px 0;
+  padding-top: 34vh;
+  height: 85vh;
 }
 
-.banner h1 {
-  margin: 0;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
+.banner-head{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #F8F9FA;
 }
-
-.banner p {
-  font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+.banner-head h1{
+  font-size: 64px;
 }
