--- a/app/views/shared/_pet_card_thinner.html.erb
+++ b/app/views/shared/_pet_card_thinner.html.erb
@@ -8,7 +8,7 @@
   <div class="card-body px-3">
     <h3 class="card-title"><%= pet.name %> (<%= pet.species %>)</h3>
     <p class="card-text">Location: <%= pet.shelter.location %></p>
-    <p class="card-text">Price: <%= pet.price %>$</p>
+    <p class="card-text">Price: $<%= pet.price %>0/day</p>
     <%#= link_to "Delete", pet_path(pet), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} if delete && current_user.shelter == pet.shelter%>
     <div class="delete-btn">
       <% if delete && current_user.shelter == pet.shelter %>
