--- a/app/views/shared/_reservation_card.html.erb
+++ b/app/views/shared/_reservation_card.html.erb
@@ -6,11 +6,10 @@
   <% end %>
   <div class="card-body px-3">
     <h3 class="card-title my-3"><%= booking.pet.name %></h3>
-    <p class="card-text">Status: <%= booking.status %></p>
+    <p class="card-text">Status: <%= booking.status.upcase %></p>
     <p class="card-text">From: <%= booking.start_date.strftime("%d/%m/%y") %></p>
     <p class="card-text">To: <%= booking.end_date.strftime( "%d/%m/%y") %></p>
-    <div class="card-text">Total: $
-      <%= (booking.end_date-booking.start_date).to_i * booking.pet.price %>
+    <div class="card-text">Total: $<%= (booking.end_date-booking.start_date).to_i * booking.pet.price %>
       (<%= (booking.end_date-booking.start_date).to_i %> days total)
     </div>
 
