--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,33 +24,5 @@
   </div>
 </div>
 <div class="container mt-5 mb-3">
-  <div class="cards">
-    <div class="card-trip">
-      <img src="https://source.unsplash.com/random/?dog" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Milo</h2>
-          <p>Cute and friendly! Loves to play</p>
-        </div>
-      </div>
-    </div>
-    <div class="card-trip">
-      <img src="https://source.unsplash.com/random/?cat" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Mr Grinch</h2>
-          <p>Very grumpy. Not such a fun cat</p>
-        </div>
-      </div>
-    </div>
-    <div class="card-trip">
-      <img src="https://source.unsplash.com/random/?whale" />
-      <div class="card-trip-infos">
-        <div>
-          <h2>Willy</h2>
-          <p>Friendly whale. Huge pool needed</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render "pets/cards", title: "Recommended Pets", pets: @pets  %>
 </div>
