--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -16,19 +16,19 @@
       <div class="pet-info">
         <ul class="list-inline">
           <li class="list-inline-item mb-3">
-            <i class="fa-solid fa-paw"></i> : <%=@pet.species %>
+            <i class="fa-solid fa-paw"></i> <%=@pet.species %>
           </li>
           <li class="list-inline-item mb-3">
-            Age: <%=@pet.age %> yrs
+            <i class="fa-solid fa-cake-candles"></i> <%=@pet.age %> yrs
           </li>
           <li class="list-inline-item mb-3">
-            <i class="fa-solid fa-venus-mars"></i> : <%=@pet.gender%>
+            <i class="fa-solid fa-venus-mars"></i> <%=@pet.gender%>
           </li>
           <li class="list-inline-item mb-3">
-            <i class="fa-solid fa-house-chimney"></i> : <%=@pet.shelter.name%>
+            <i class="fa-solid fa-house-chimney"></i> <%=@pet.shelter.name%>
           </li>
           <li class="list-inline-item mb-3">
-            <i class="fa-solid fa-location-dot"></i> : <%=@pet.shelter.location%>
+            <i class="fa-solid fa-location-dot"></i> <%=@pet.shelter.location%>
           </li>
         </ul>
       </div>
