--- a/app/assets/stylesheets/pages/_auth_form.scss
+++ b/app/assets/stylesheets/pages/_auth_form.scss
@@ -28,6 +28,7 @@ display: flex;
   display: flex;
   justify-content: center;
   flex-grow: 1;
+  padding: 8px;
 }
 .auth-btn:hover{
   background-color: transparent;
