--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
 
   <div class="browse-pets-btn-container my-5">
     <%=link_to pets_path, class: 'browse-pets-btn'  do%>
-      <h2>Browse Pets</h2>
+      <h2 class="mb-0">Browse Pets</h2>
     <%end %>
   </div>
 </div>
